add some weixin js api tests

--- a/src/main/resources/static/ui/CheckInOut.html
+++ b/src/main/resources/static/ui/CheckInOut.html
@@ -16,6 +16,11 @@
 <body>
     <div id="app">
         <mt-button type="primary" size="large" @click="handleCheckInOut">Check InOut</mt-button>
+        <mt-button type="primary" size="large" @click="checkJsApi">checkJsApi</mt-button>
+        <mt-button type="primary" size="large" @click="chooseImage">chooseImage</mt-button>
+        <mt-button type="primary" size="large" @click="getLocation">getLocation</mt-button>
+        <mt-button type="primary" size="large" @click="openLocation">openLocation</mt-button>
+        <mt-button type="primary" size="large" @click="scanQRCode">scanQRCode</mt-button>
     </div>
 
     <script src="assets/js/jweixin-1.4.0.js"></script>
