fix dynamic paramters with signature

--- a/src/main/resources/static/ui/CheckInOut.html
+++ b/src/main/resources/static/ui/CheckInOut.html
@@ -23,6 +23,7 @@
         <mt-button type="primary" size="large" @click="scanQRCode">scanQRCode</mt-button>
     </div>
 
+    <script src="assets/js/sha1.js"></script>
     <script src="assets/js/jweixin-1.4.0.js"></script>
     <script src="assets/js/axios.min.js"></script>
     <script src="assets/js/vue.js"></script>
