add weixin api cross site test

--- a/src/main/resources/static/ui/CheckInOut.html
+++ b/src/main/resources/static/ui/CheckInOut.html
@@ -21,6 +21,7 @@
         <mt-button type="primary" size="large" @click="getLocation">getLocation</mt-button>
         <mt-button type="primary" size="large" @click="openLocation">openLocation</mt-button>
         <mt-button type="primary" size="large" @click="scanQRCode">scanQRCode</mt-button>
+        <mt-button type="primary" size="large" @click="getAccessToken">getAccessToken</mt-button>
     </div>
 
     <script src="assets/js/sha1.js"></script>
