--- a/src/main/resources/static/ui/CheckInOut.html
+++ b/src/main/resources/static/ui/CheckInOut.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/mintui.css">
+    <link rel="stylesheet" href="assets/css/custom.css">
     <title>CheckInOut</title>
     <script src="assets/js/vconsole.min.js"></script>
     <script>
