--- a/src/main/resources/static/ui/AdminIndex.html
+++ b/src/main/resources/static/ui/AdminIndex.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/mintui.css">
     <link rel="stylesheet" href="assets/css/custom.css">
-    <title>Demo</title>
+    <title>AdminIndex</title>
     <script src="assets/js/vconsole.min.js"></script>
     <script>
         var vConsole = new VConsole();
@@ -16,14 +16,15 @@
 
 <body>
     <div id="app">
-        Demo
+        <mt-cell title="用户列表" is-link to="UserIndex.html"></mt-cell>
+        <mt-cell title="打卡列表" is-link to="CheckRecordIndex.html"></mt-cell>
     </div>
 
     <script src="assets/js/jweixin-1.4.0.js"></script>
     <script src="assets/js/axios.min.js"></script>
     <script src="assets/js/vue.js"></script>
     <script src="assets/js/mintui.js"></script>
-    <script src="viewmodels/demo.js"></script>
+    <script src="viewmodels/AdminIndex.js"></script>
 </body>
 
 </html>
