--- a/src/main/resources/static/spa/App.html
+++ b/src/main/resources/static/spa/App.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/mintui.css">
     <link rel="stylesheet" href="assets/css/custom.css">
-    <title>AdminIndex</title>
+    <title>App</title>
     <script src="assets/js/vconsole.min.js"></script>
     <script>
         var vConsole = new VConsole();
@@ -27,7 +27,7 @@
     <script src="assets/js/vue-router.js"></script>
     <script src="assets/js/mintui.js"></script>
     <script src="router.js"></script>
-    <script src="AdminIndex.js"></script>
+    <script src="App.js"></script>
 </body>
 
 </html>
