add admin index page

--- a/src/main/resources/static/spa/App.html
+++ b/src/main/resources/static/spa/App.html
@@ -16,8 +16,6 @@
 
 <body>
     <div id="app">
-        <mt-cell title="用户列表" is-link to="/foo"></mt-cell>
-        <mt-cell title="打卡列表" is-link to="/bar"></mt-cell>
         <router-view></router-view>
     </div>
 
@@ -26,6 +24,9 @@
     <script src="assets/js/vue.js"></script>
     <script src="assets/js/vue-router.js"></script>
     <script src="assets/js/mintui.js"></script>
+
+    <script src="pages/AdminIndex.js"></script>
+
     <script src="router.js"></script>
     <script src="App.js"></script>
 </body>
