add user index page and check record index page

--- a/src/main/resources/static/spa/App.html
+++ b/src/main/resources/static/spa/App.html
@@ -26,6 +26,8 @@
     <script src="assets/js/mintui.js"></script>
 
     <script src="pages/AdminIndex.js"></script>
+    <script src="pages/UserIndexPage.js"></script>
+    <script src="pages/CheckRecordIndexPage.js"></script>
 
     <script src="router.js"></script>
     <script src="App.js"></script>
